kubernetes/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: wanderlust
spec:
  type: ClusterIP   # ✅ FIXED
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
