kubernetes/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: wanderlust
spec:
  type: ClusterIP   # ✅ FIXED
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80   # ✅ FIXED
      protocol: TCP
