kubernetes/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: wanderlust
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7
          ports:
            - containerPort: 6379
          args: ["--appendonly", "yes"]   # ✅ enable persistence
          volumeMounts:
            - name: redis-storage
              mountPath: /data            # ✅ correct directory

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"

      volumes:
        - name: redis-storage
          persistentVolumeClaim:
            claimName: redis-pvc   # ✅ separate PVC

---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: wanderlust
spec:
  type: ClusterIP   # ✅ internal
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
